# XML-Editor

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resource.qrc  treeitem.cpp  treeitem.h  treemodel.cpp  treemodel.h  xmlwindow.cpp  xmlwindow.h  xmlwindow.ui
translations/: EditorXML_en_US.ts
